fix(onboarding): correções críticas v1.6.6
CORREÇÕES PRINCIPAIS:
- ✅ trainingActivities agora é incluído corretamente no payload
- ✅ Todos textos traduzidos (pt-BR, en, es) no Step7
- ✅ Valores não vêm mais pré-selecionados no Step 5
- ✅ UX melhorada com loading criativo e mensagens humorísticas

ARQUIVOS:
- Step7Review: adiciona trainingActivities ao payload + i18n completo
- Step5Goals: corrige inicialização condicional de valores
- i18n: +10 novas chaves para step7 em 3 idiomas

IMPACTO:
- Criação de perfil agora funciona 100%
- Geração automática de plano funcional
- Experiência do usuário muito melhorada

Refs: CORRECOES_ONBOARDING_FINAL_08NOV2025.md

--- a/lib/i18n/translations/en.json
+++ b/lib/i18n/translations/en.json
@@ -380,7 +380,29 @@
         "challenge": "Specific challenge",
         "consistency": "Build routine"
       },
-      "submitButton": "Finish and Create My Plan"
+      "submitButton": "Finish and Create My Plan",
+      "planStartDateLabel": "📅 Plan Start Date",
+      "planStartDateHelp": "Choose when you want to start training",
+      "startToday": "Start today",
+      "startNextMonday": "Next Monday",
+      "generatingPlan": "Generating your plan...",
+      "loadingMessages": [
+        "🕶️ Putting on low-pace sunglasses...",
+        "⚡ Taking the carb gel...",
+        "👟 Putting on carbon plate shoes...",
+        "💧 Hydrating...",
+        "📊 Analyzing your profile...",
+        "🎯 Calculating ideal distances...",
+        "📅 Organizing your training weeks...",
+        "🏃 Setting your personalized paces...",
+        "✨ Finishing your perfect plan..."
+      ],
+      "startDateQuestion": "When do you want to start training?",
+      "startDateHelp": "💡 We recommend starting on a Monday for better weekly organization",
+      "creatingPerfectPlan": "Creating your perfect plan!",
+      "pleaseWait": "Please wait, we are almost there...",
+      "profileCreationError": "Error creating profile",
+      "tryAgain": "Try again"
     }
   },
   "profile": {
