feat(onboarding): adapt health step injury questions for beginners
STEP 4 IMPROVEMENT: Context-aware injury questions

Problem:
- Step 4 asked "Teve lesões de corrida recentemente?"
- Not applicable for absolute beginners (never ran)
- Confusing and intimidating for new users

Solution:
1. Detect if user never ran (hasRunBefore === false)
2. Adapt injury question text:
   - Beginners: "Já teve alguma lesão praticando esportes?"
   - Runners: "Já teve alguma lesão (corrida ou outro esporte)?"
3. Adapt injury list:
   - Beginners: General sports injuries only
   - Runners: Running-specific + general injuries

Changes:
- lib/i18n/translations/pt-BR.json:
  * New key: hasInjuriesBeginners
  * Updated: hasInjuries (more generic)
  * Added general injuries: ankle/knee sprain, back/shoulder/hip pain

- components/onboarding/v1.3.0/Step4Health.tsx:
  * Detect isAbsoluteBeginner from data.hasRunBefore
  * Conditional injury question text
  * Conditional injury options list
  * Better UX for non-runners

Result:
- ✅ Appropriate questions for each user type
- ✅ No intimidating running-specific terms for beginners
- ✅ More inclusive injury list
- ✅ Context-aware onboarding

Impact:
- Better UX for target audience
- Less confusion
- More accurate data collection
- Professional adaptive flow

--- a/lib/i18n/translations/pt-BR.json
+++ b/lib/i18n/translations/pt-BR.json
@@ -228,7 +228,8 @@
     "step4": {
       "title": "Saúde e Histórico",
       "subtitle": "Informações importantes para prevenir lesões",
-      "hasInjuries": "Teve lesões de corrida recentemente?",
+      "hasInjuries": "Já teve alguma lesão (corrida ou outro esporte)?",
+      "hasInjuriesBeginners": "Já teve alguma lesão praticando esportes?",
       "whichInjuries": "Quais lesões?",
       "otherInjuryPlaceholder": "Outra lesão...",
       "injuries": {
@@ -239,6 +240,11 @@
         "itBand": "Lesão IT Band",
         "stressFracture": "Fratura Estresse",
         "muscleStrain": "Distensão Muscular",
+        "sprainAnkle": "Entorse no Tornozelo",
+        "sprainKnee": "Entorse no Joelho",
+        "backPain": "Dor nas Costas",
+        "shoulderPain": "Dor no Ombro",
+        "hipPain": "Dor no Quadril",
         "other": "Outro"
       },
       "injuryDetailsTitle": "Detalhes das Lesões (Opcional)",
