fix(i18n): add missing translation keys for distances and phases
TRANSLATION FIX: Complete goalLabels and phases translations

Problem:
- Users seeing raw keys: "goalLabels.5k", "phases.baseaerobica"
- Missing distance translations (5k, 15k, 21k, 42k)
- Missing phase variations (baseaerobica, recuperação, etc)

Solution:
Added missing translation keys:

1. Distance Labels (plano.goalLabels):
   - 5k → "5km"
   - 10k → "10km" (already existed)
   - 15k → "15km"
   - 21k → "21km (Meia-Maratona)"
   - 42k → "42km (Maratona)"
   - half_marathon → "Meia-Maratona"
   - marathon → "Maratona"

2. Phase Variations (plano.phases):
   - baseaerobica → "Base Aeróbica" (without space)
   - base aeróbica → "Base Aeróbica" (with accent)
   - recuperacao → "Recuperação" (without accent)
   - recuperação → "Recuperação" (with accent)
   - recovery → "Recuperação"

Impact:
- ✅ All distances now display correctly
- ✅ All phase names normalized
- ✅ No more raw translation keys visible
- ✅ Professional UI throughout

Files:
- lib/i18n/translations/pt-BR.json (+10 keys)

--- a/lib/i18n/translations/pt-BR.json
+++ b/lib/i18n/translations/pt-BR.json
@@ -857,13 +857,18 @@
       "peak": "Pico",
       "taper": "Polimento",
       "race": "Corrida",
+      "recovery": "Recuperação",
       "baseaerobia": "Base Aeróbica",
+      "baseaerobica": "Base Aeróbica",
       "base aerobia": "Base Aeróbica",
+      "base aeróbica": "Base Aeróbica",
       "construcao": "Construção",
       "construção": "Construção",
       "pico": "Pico",
       "polimento": "Polimento",
-      "corrida": "Corrida"
+      "corrida": "Corrida",
+      "recuperacao": "Recuperação",
+      "recuperação": "Recuperação"
     },
     "workoutTypes": {
       "easy": "Treino Leve",
@@ -884,7 +889,11 @@
       "manageRaces": "Gerenciar Corridas"
     },
     "goalLabels": {
+      "5k": "5km",
       "10k": "10km",
+      "15k": "15km",
+      "21k": "21km (Meia-Maratona)",
+      "42k": "42km (Maratona)",
       "half_marathon": "Meia-Maratona",
       "marathon": "Maratona"
     },
