fix: Strava import issues - link workouts and translate subtypes

--- a/lib/i18n/translations/pt-BR.json
+++ b/lib/i18n/translations/pt-BR.json
@@ -1168,7 +1168,11 @@
       "tempo": "Tempo",
       "intervals": "Intervalado",
       "long": "Longão",
-      "recovery": "Recuperação"
+      "recovery": "Recuperação",
+      "Workout": "Musculação",
+      "WeightTraining": "Musculação",
+      "Crossfit": "Crossfit",
+      "Yoga": "Yoga"
     }
   },
   "raceManagement": {
