fix(i18n): corrigir chaves de tradução faltantes
Problema: Textos apareciam como chaves literais
- weekNavigation.volume
- weekNavigation.completed
- performance.bestVdot: 34

Solução:
1. Adicionar 'volume' e 'completed' em weekNavigation (pt-BR.json)
2. Corrigir t('performance.bestVdot') para t('bestVdot') (PerformanceTab)
   (hook já está no namespace profile.performance)

Arquivos modificados:
- lib/i18n/translations/pt-BR.json (+2 keys)
- components/profile/v1.3.0/PerformanceTab.tsx (linha 485)

--- a/lib/i18n/translations/pt-BR.json
+++ b/lib/i18n/translations/pt-BR.json
@@ -843,6 +843,8 @@
       "of": "de",
       "currentWeek": "Semana Atual",
       "weekFocus": "Foco da Semana",
+      "volume": "Volume",
+      "completed": "concluído",
       "noWorkouts": "Nenhum treino disponível para esta semana",
       "loadingWeek": "Carregando dados da semana..."
     },
